--- a/16061140.md
+++ b/16061140.md
@@ -1,17 +1,26 @@
 16061140
 >问题1： 在一个游戏中，主办方在三个门中任选一个，在门后放了一个奖品，另外两个门之后是空的。选手要在三个门中选择一个抽奖。 当选手选择了一个门，未曾打开门之前，主办方打开了另外两个门中没有奖品的那个门，并向选手说， 他可以改变他的选择，即转为选择剩下一个没有打开的门。 请问，如果选手此时改变选择， 他会提高或降低获奖的可能性么？提高多少？请给出你的分析。 
 #### 解答：
-假设选手并没有改变选择，则选手最终中奖的概率为1/3
+假设选手并没有改变选择，则选手最终中奖的概率为1/3，
+
 当选手改变了自己的选择时，有以下两种情况：
+
 有2/3的概率未改变选择时并没有中奖，此时改变选择后中奖；
+
 有1/3的概率未改变选择时已经中奖，此时改变选择后不中奖。
+
 只有在第一种情况下改变选择后才中奖，故有2/3的概率改变选择后中奖，与不改变选择的1/3相比，提高了1/3。
+
 >问题2：如何看待 “中文房间” 问题，中文房间有智能么？它有什么样水平的智能？如何才能让它具有人类水平的智能？
 #### 解答：
 我认为中文房间只具有弱人工智能，并不具有人类水平的智能。
+
 房间里的人并不真正会说中文，他只是利用了特定的工具，将传入的文字进行翻译做出回复后再使用工具将回复翻译为中文传出以造成一种房间内人会中文的假象。
+
 我认为这就和AlphaGo在下围棋时只是在不停地处理矩阵运算而不知道自己在进行“下围棋”这种事一个性质。
+
 要实现真正的人类水平的智能，必须要有和人类同等的感知能力、学习能力与接受能力，要做到像人类一样能认知，思考，判断。
+
 >问题3：既然这门课讲了很多计算机前沿，那么学生就可以预计一下这些前沿知识如何能给普通用户或某个行业带来好处。 学生根据讲课的内容和参考文献，用 NABCD 的模板，描述你心目中一个使用了 “人工智能+其他前沿技术” 的创新项目。 这个项目应该是由 7 - 10 名有相关技能的大学生在 4 个月能完成。
 #### 项目：银行的智能客服系统
 **Need**：银行系统用户等待时间过长，常常引发不满。
