--- a/16061140.md
+++ b/16061140.md
@@ -17,7 +17,7 @@
 
 房间里的人并不真正会说中文，他只是利用了特定的工具，将传入的文字进行翻译做出回复后再使用工具将回复翻译为中文传出以造成一种房间内人会中文的假象。
 
-我认为这就和AlphaGo在下围棋时只是在不停地处理矩阵运算而不知道自己在进行“下围棋”这种事一个性质。
+我认为这就和AlphaGo在下围棋时只是在不停地处理矩阵运算而不知道自己在进行“下围棋”这件事一个性质。
 
 要实现真正的人类水平的智能，必须要有和人类同等的感知能力、学习能力与接受能力，要做到像人类一样能认知，思考，判断。
 
