--- a/16061140.md
+++ b/16061140.md
@@ -25,7 +25,7 @@
 #### 项目：银行的智能客服系统
 **Need**：银行系统用户等待时间过长，常常引发不满。
 
-**Approach**：用人工智能技术分析的需求，为其提供相应的信息查询功能与服务预约功能等。
+**Approach**：用人工智能技术分析用户的需求，为其提供相应的信息查询功能与服务预约功能等。
 
 **Benefit**：提高银行系统的工作效率，提升用户的满意度。
 
